--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
       <a class="nav-link" href="/">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/about">About</a>
+      <a class="nav-link" href="/protected">Protected</a>
     </li>
   </ul>
 </nav>
