--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,5 +7,8 @@
     <li class="nav-item">
       <a class="nav-link" href="/protected">Protected</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/signout">Sign Out</a>
+    </li>
   </ul>
 </nav>
