--- a/views/pages/protected.ejs
+++ b/views/pages/protected.ejs
@@ -15,13 +15,18 @@
     <div class="row">
       <div class="col-sm-8">
         <div class="jumbotron text-center">
-          <h1>Bitcoin</h1>
-          <p>Bitcoin Total: 1,000</p>
+          <%if (isSignedIn) { %>
+            <h1>You are signed in!</h1>
+            <% } %>
+              <br />
+              <h1>Bitcoin</h1>
+              <p>Bitcoin Total: 1,000</p>
         </div>
       </div>
 
       <div class="col-sm-4">
         <div class="well">
+          <br />
           <br />
           <br />
           <br />
